fix(navigation): ensure scrollbars on IE11
Related to CAM-5082

--- a/styles/_menu.less
+++ b/styles/_menu.less
@@ -71,7 +71,7 @@
 
   .site-menu-items {
     overflow: auto;
-    max-height: ~"calc(100% - 49px)";
+    height: ~"calc(100% - 49px)";
     > li {
       border-bottom: 1px solid #fff;
       display: block;
